@@ -5946,6 +5946,10 @@ Assumes that $p$ is prime.
 MA,GEN MB},\hfil\break
 as \kbd{FpX\_ffintersect}. Assumes that $p$ is prime.
 
+\fun{GEN}{Flx_Laplace}{GEN x, ulong p}
+
+\fun{GEN}{Flx_invLaplace}{GEN x, ulong p}
+
 \fun{GEN}{Flx_Newton}{GEN x, long n, ulong p}
 
 \fun{GEN}{Flx_fromNewton}{GEN x, ulong p}
